--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,4 +1,4 @@
-name: Hello World job
+name: Hello World!
 
 on:
   push:
@@ -10,5 +10,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Say hello
-        run: |
-          echo "Hello World!"
+        run: echo "Hello World!"
+        
+      - name: Print current date
+        run: date
+
+      - name: List directory contents
+        run: ls -l
