--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   hello_world_job:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -16,9 +16,9 @@ jobs:
         run: |
           echo "Hello World!"
 
-      - name: Print current time and date
+      - name: Print current date and time
         run: |
-          echo "Current date and time: $(date +'%Y-%m-%d %H:%M:%S')"
+          date
 
       - name: List directory contents
         run: |
