--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,5 @@
     "singleQuote": true,
     "trailingComma": "none",
     "bracketSpacing": true,
-    "arrowParens": "avoid",
-    "endOfLine": "lf"
+    "arrowParens": "avoid"
 }
