--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "eslint": "eslint \"src/**/*.{js,jsx}\" app.js",
         "build": "webpack --mode production",
         "render-build": "npm install && npm run build",
-        "lint": "eslint \"src/**/*.{js,jsx}\" \"server/**/*.js\"",
-        "lint:fix": "eslint \"src/**/*.{js,jsx}\" \"server/**/*.js\" --fix"
+        "lint": "eslint \"src/**/*.{js,jsx}\" \"app.js\"",
+        "lint:fix": "eslint \"src/**/*.{js,jsx}\" \"app.js\" --fix"
     },
     "repository": {
         "type": "git",
