--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,20 +13,15 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: '20'
-
-            - name: Cache node modules
-              uses: actions/cache@v3
-              with:
-                  path: ~/.npm
-                  key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+                  cache: 'npm'
 
             - name: Install dependencies
               run: npm ci
 
-            - name: Install Playwright
+            - name: Install Playwright browsers
               run: npx playwright install --with-deps
 
-            - name: Lint code
+            - name: Run linter
               run: npm run lint
 
             - name: Build project
@@ -38,11 +33,30 @@ jobs:
             - name: Run E2E tests
               run: npm run test:e2e
 
+            - name: Upload production build
+              uses: actions/upload-artifact@v3
+              with:
+                  name: production-build
+                  path: dist/
+                  retention-days: 1
+
     deploy:
         needs: test
         runs-on: ubuntu-latest
         steps:
-            - name: Trigger Render Deployment
+            - name: Download build artifacts
+              uses: actions/download-artifact@v3
+              with:
+                  name: production-build
+                  path: dist
+
+            - name: Verify build files
+              run: ls -la dist/
+
+            - name: Deploy to Render
               run: |
                   curl -X POST \
                   "https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}"
+              env:
+                  RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+                  RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
