--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Deployment Pipeline
 
 on:
     push:
@@ -51,12 +51,25 @@ jobs:
                   path: dist
 
             - name: Verify build files
-              run: ls -la dist/
+              run: |
+                  echo "Build contents:"
+                  ls -la dist/
+                  [ -f dist/index.html ] || exit 1
+                  [ -f dist/bundle.js ] || exit 1
 
             - name: Deploy to Render
               run: |
-                  curl -X POST \
-                  "https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}"
+                  set -e  # Exit immediately if any command fails
+                  echo "Triggering Render deployment..."
+                  response=$(curl -s -o /dev/null -w "%{http_code}" -X POST \
+                    "https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}")
+
+                  if [ "$response" -ge 200 ] && [ "$response" -lt 300 ]; then
+                    echo "Deployment triggered successfully!"
+                  else
+                    echo "Failed to trigger deployment. HTTP status: $response"
+                    exit 1
+                  fi
               env:
                   RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
                   RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
