--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,20 +54,25 @@ jobs:
               run: |
                   echo "Build contents:"
                   ls -la dist/
-                  [ -f dist/index.html ] || exit 1
-                  [ -f dist/bundle.js ] || exit 1
+                  [ -f dist/index.html ] || { echo "index.html missing!"; exit 1; }
+                  [ -f dist/bundle.js ] || { echo "bundle.js missing!"; exit 1; }
 
             - name: Deploy to Render
               run: |
-                  set -e  # Exit immediately if any command fails
+                  echo "Service ID: srv-${{ secrets.RENDER_SERVICE_ID }}"
                   echo "Triggering Render deployment..."
-                  response=$(curl -s -o /dev/null -w "%{http_code}" -X POST \
+
+                  response_code=$(curl -s -o /dev/null -w "%{http_code}" -X POST \
                     "https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}")
 
-                  if [ "$response" -ge 200 ] && [ "$response" -lt 300 ]; then
+                  if [ "$response_code" -eq 200 ]; then
                     echo "Deployment triggered successfully!"
                   else
-                    echo "Failed to trigger deployment. HTTP status: $response"
+                    echo "Failed to trigger deployment. HTTP status: $response_code"
+                    echo "Possible issues:"
+                    echo "1. Invalid Service ID or API Key"
+                    echo "2. API Key doesn't have deploy permissions"
+                    echo "3. Service doesn't exist in your Render account"
                     exit 1
                   fi
               env:
