--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@testing-library/react": "^14.1.2",
         "babel-jest": "^29.7.0",
         "babel-loader": "^9.1.3",
+        "copy-webpack-plugin": "^13.0.0",
         "css-loader": "^6.8.1",
         "eslint": "^8.57.1",
         "eslint-plugin-jest": "^27.6.1",
