--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,8 @@ jobs:
                   path: dist/
 
     deploy:
-        if: github.event_name == 'push'
+        if: ${{ github.event_name == 'push' }}
+
         needs: test
         runs-on: ubuntu-latest
         steps:
