--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,14 @@
-name: Deployment pipeline
+name: CI/CD Deployment Pipeline
 
 on:
     push:
-        branches:
-            - main
+        branches: [main]
     pull_request:
         branches: [main]
-        types: [opened, synchronize]
 
 jobs:
-    simple_deployment_pipeline:
-        runs-on: ubuntu-20.04
+    test:
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
 
@@ -45,9 +43,9 @@ jobs:
                   path: dist/
 
     deploy:
-        needs: [simple_deployment_pipeline]
-        runs-on: ubuntu-20.04
         if: github.event_name == 'push'
+        needs: test
+        runs-on: ubuntu-latest
         steps:
             - name: Install jq
               run: sudo apt-get install -y jq
@@ -68,6 +66,7 @@ jobs:
             - name: Deploy to Render
               run: |
                   echo "Starting Render deployment for service: ${{ secrets.RENDER_SERVICE_ID }}"
+
                   echo "Verifying service..."
                   SERVICE_INFO=$(curl -s -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
                     "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}")
@@ -97,17 +96,3 @@ jobs:
               env:
                   RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
                   RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
-
-    tag_release:
-        needs: [simple_deployment_pipeline]
-        runs-on: ubuntu-20.04
-        if: github.event_name == 'push'
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            - name: Bump version and push tag
-              uses: anothrNick/github-tag-action@1.64.0
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  DEFAULT_BUMP: patch
