--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,11 @@ name: CI/CD Deployment Pipeline
 on:
     push:
         branches: [main]
-
     pull_request:
         branches: [main]
-        types: [opened, synchronize]
 
 jobs:
-    simple_deployment_pipeline:
+    test:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -46,7 +44,8 @@ jobs:
 
     deploy:
         if: ${{ github.event_name == 'push' }}
-        needs: simple_deployment_pipeline
+
+        needs: test
         runs-on: ubuntu-latest
         steps:
             - name: Install jq
@@ -98,14 +97,3 @@ jobs:
               env:
                   RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
                   RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
-
-    tag_release:
-        if: ${{ github.event_name == 'push' }}
-        needs: [simple_deployment_pipeline, deploy]
-        runs-on: ubuntu-latest
-        steps:
-            - name: Bump version and push tag
-              uses: anothrNick/github-tag-action@1.64.0
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  DEFAULT_BUMP: patch
