--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: CI/CD Deployment Pipeline
 
 on:
     pull_request:
-        types: [closed]
+        types: [opened, synchronize, reopened, closed]
         branches: [main]
 
 jobs:
@@ -20,45 +20,35 @@ jobs:
             - run: npm run build
             - run: npm test
             - run: npm run test:e2e
-            - name: Upload production build
-              if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
-              uses: actions/upload-artifact@v4
+            - uses: actions/upload-artifact@v4
+              if: github.event.pull_request.merged == true
               with:
                   name: production-build
                   path: dist/
 
     deploy:
-        if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
+        if: github.event.pull_request.merged == true
         needs: test
         runs-on: ubuntu-latest
         permissions:
             contents: write
         steps:
-            - run: sudo apt-get install -y jq
             - uses: actions/download-artifact@v4
               with:
                   name: production-build
                   path: dist
             - run: |
-                  [ -f dist/index.html ] || { echo "::error::index.html missing!"; exit 1; }
-                  [ -f dist/bundle.js ] || { echo "::error::bundle.js missing!"; exit 1; }
-            - name: Deploy to Render
-              run: |
-                  DEPLOY_RESPONSE=$(curl -s -X POST \
+                  [ -f dist/index.html ] || exit 1
+                  [ -f dist/bundle.js ] || exit 1
+            - run: |
+                  curl -s -X POST \
                     "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
                     -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-                    -H "Content-Type: application/json")
-
-                  DEPLOY_ID=$(echo "$DEPLOY_RESPONSE" | jq -r '.id')
-                  [ -n "$DEPLOY_ID" ] || { echo "::error::Deployment failed"; exit 1; }
-                  echo "::notice::✅ Deployment triggered! ID: $DEPLOY_ID"
-              env:
-                  RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-                  RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+                    -H "Content-Type: application/json"
 
     tag_release:
-        if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
-        needs: [test, deploy]
+        if: github.event.pull_request.merged == true
+        needs: deploy
         runs-on: ubuntu-latest
         permissions:
             contents: write
@@ -66,9 +56,7 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   ref: ${{ github.event.pull_request.merge_commit_sha }}
-                  fetch-depth: '0'
+                  fetch-depth: 0
             - uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  DEFAULT_BUMP: patch
-                  WITH_V: false
