fixes to exercise 17

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: CI/CD Deployment Pipeline
 
 on:
     pull_request:
-        types: [opened, synchronize, reopened, closed]
+        types: [closed]
         branches: [main]
 
 jobs:
