--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,3 +60,33 @@ jobs:
             - uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    notifications:
+        needs: [test, deploy, tag_release]
+        runs-on: ubuntu-latest
+        if: always()
+        steps:
+            - name: Deployment Success
+              if: success()
+              uses: rjstone/discord-webhook-notify@v1
+              with:
+                  severity: info
+                  details: |
+                      🚀 A new version of Pokedex Deployed
+                      Commit: ${{ github.sha }}
+                      Author: ${{ github.actor }}
+                      Workflow: ${{ github.workflow }}
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+
+            - name: Deployment Failure
+              if: failure()
+              uses: rjstone/discord-webhook-notify@v1
+              with:
+                  severity: error
+                  details: |
+                      ❌ Deployment failed!
+                      Commit: ${{ github.sha }}
+                      Author: ${{ github.actor }}
+                      Workflow: ${{ github.workflow }}
+                      Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
