--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,20 @@ jobs:
                     "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
                     -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
                     -H "Content-Type: application/json"
+            - name: Notify Success
+              uses: rjstone/discord-webhook-notify@v1
+              if: success()
+              with:
+                  severity: info
+                  details: A new version of Pokedex Deployed 🚀
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            - name: Notify Failure
+              uses: rjstone/discord-webhook-notify@v1
+              if: failure()
+              with:
+                  severity: error
+                  details: Build failed on commit ${{ github.event.pull_request.head.sha }}
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
     tag_release:
         if: github.event.pull_request.merged == true
@@ -60,33 +74,3 @@ jobs:
             - uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    notifications:
-        needs: [test, deploy, tag_release]
-        runs-on: ubuntu-latest
-        if: always()
-        steps:
-            - name: Deployment Success
-              if: success()
-              uses: rjstone/discord-webhook-notify@v1
-              with:
-                  severity: info
-                  details: |
-                      🚀 A new version of Pokedex Deployed
-                      Commit: ${{ github.sha }}
-                      Author: ${{ github.actor }}
-                      Workflow: ${{ github.workflow }}
-                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-
-            - name: Deployment Failure
-              if: failure()
-              uses: rjstone/discord-webhook-notify@v1
-              with:
-                  severity: error
-                  details: |
-                      ❌ Deployment failed!
-                      Commit: ${{ github.sha }}
-                      Author: ${{ github.actor }}
-                      Workflow: ${{ github.workflow }}
-                      Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
